# HyperLite

./: .gitignore  Cargo.toml  DOCS.md  README.md  SPEC.md
.github/workflows/: release.yml
migrations/: 001_initial.sql  002_agents_drafts.sql
npm/hyperlite/: README.md  package.json
npm/hyperlite-darwin-arm64/: README.md  package.json
npm/hyperlite-darwin-x64/: .npmignore  README.md  package.json
npm/hyperlite-linux-arm64/: README.md  package.json
npm/hyperlite-linux-x64/: README.md  package.json
npm/hyperlite-win32-x64/: .npmignore  README.md  package.json
src/: app.rs  event.rs  hardware.rs  main.rs  startup.rs
src/config/: mod.rs  schema.rs
src/db/: mod.rs
src/keybinds/: mod.rs
src/memory/: mod.rs
src/models/: codex.rs  mod.rs
src/pentest/: env.rs  mod.rs  runner.rs  spec.rs  tools.rs
src/project/: mod.rs
src/providers/: direct.rs  gpt4all.rs  jan.rs  kobold.rs  llamacpp.rs  llamafile.rs  lmstudio.rs  localai.rs  mod.rs  native.rs  ollama.rs  openai_compat.rs  textgen.rs  vllm.rs
src/rag/: chunker.rs  mod.rs  store.rs
src/session/: message.rs
src/tools/: docs.rs  files.rs  git.rs  http.rs  mod.rs  rag.rs  search.rs  shell.rs
src/ui/: layout.rs  markdown.rs  mod.rs  pentest.rs  review.rs  syntax.rs  theme.rs
src/ui/components/: footer.rs  input.rs  mascot.rs  message.rs  message_list.rs  mod.rs  permission.rs  pixel.rs  sidebar.rs  spinner.rs  toast.rs  tool_call.rs
src/ui/dialogs/: agent_picker.rs  command.rs  draft_picker.rs  help.rs  mod.rs  model_picker.rs  session_list.rs  theme_picker.rs
