[package]
name = "hyperlite"
version = "0.1.6"
edition = "2021"
description = "Hyper-fast local-first TUI for offline LLM inference"

[[bin]]
name = "hl"
path = "src/main.rs"

[dependencies]
# ── TUI ──────────────────────────────────────────────────────────────────────
ratatui          = { version = "0.29", features = ["unstable-widget-ref"] }
crossterm        = { version = "0.28", features = ["event-stream"] }
tui-textarea     = { version = "0.7",  features = ["crossterm"] }

# ── Async ────────────────────────────────────────────────────────────────────
tokio            = { version = "1", features = ["full"] }
tokio-stream     = "0.1"
futures          = "0.3"
async-trait      = "0.1"

# ── HTTP (local server APIs) ─────────────────────────────────────────────────
reqwest          = { version = "0.12", default-features = false, features = [
                       "json", "stream", "rustls-tls"
                   ] }

# ── Serialization ────────────────────────────────────────────────────────────
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
toml             = "0.8"

# ── Database ─────────────────────────────────────────────────────────────────
rusqlite         = { version = "0.32", features = ["bundled"] }

# ── IDs + Time ───────────────────────────────────────────────────────────────
ulid             = { version = "1", features = ["serde"] }
chrono           = { version = "0.4", features = ["serde"] }

# ── Rendering ────────────────────────────────────────────────────────────────
syntect          = { version = "5", default-features = false, features = [
                       "default-syntaxes", "default-themes", "parsing", "regex-fancy"
                   ] }
pulldown-cmark   = "0.12"

# ── Search ───────────────────────────────────────────────────────────────────
nucleo-matcher   = "0.3"

# ── Diffing ──────────────────────────────────────────────────────────────────
similar          = "2"

# ── Clipboard ────────────────────────────────────────────────────────────────
arboard          = "3"

# ── CLI args ─────────────────────────────────────────────────────────────────
clap             = { version = "4", features = ["derive"] }

# ── Logging ──────────────────────────────────────────────────────────────────
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Error handling ───────────────────────────────────────────────────────────
anyhow           = "1"
thiserror        = "1"

# ── Utilities ────────────────────────────────────────────────────────────────
dotenvy          = "0.15"
dirs             = "5"
unicode-width    = "0.2"
strip-ansi-escapes = "0.2"
textwrap         = "0.16"
once_cell        = "1"
regex            = "1"
walkdir          = "2"        # scanning model directories
which            = "7"        # finding llama-server / llamafile in PATH
libc             = "0.2"      # getuid() for root detection
sysinfo          = { version = "0.32", default-features = false, features = ["system", "disk", "network"] }
scraper          = "0.22"     # HTML parsing for web search results
url              = "2"        # URL encoding for search queries
open             = "5"        # open URLs in browser (optional)

# ── Native llama.cpp inference (feature-gated, compiles llama.cpp from source) ──
llama-cpp-2      = { version = "0.1", optional = true }

[features]
default = []
native-inference = ["llama-cpp-2"]

[profile.release]
opt-level     = 2
codegen-units = 16
panic         = "abort"
strip         = true

[profile.dev]
opt-level = 1
